project(beginning)

# 练习程序
# 第1章练习
add_executable(ex-1-01 exercises/ch01/ex01.cpp)
add_executable(ex-1-02 exercises/ch01/ex02.cpp)
add_executable(ex-1-03 exercises/ch01/ex03.cpp)

# 第2章练习
add_executable(ex-2-01 exercises/ch02/ex01.cpp)
add_executable(ex-2-02 exercises/ch02/ex02.cpp)
add_executable(ex-2-03 exercises/ch02/ex03.cpp)
add_executable(ex-2-04 exercises/ch02/ex04.cpp)
add_executable(ex-2-05 exercises/ch02/ex05.cpp)
add_executable(ex-2-06 exercises/ch02/ex06.cpp)
add_executable(ex-2-07 exercises/ch02/ex07.cpp)
add_executable(ex-2-08 exercises/ch02/ex08.cpp)