project(beginning)

# 练习程序
# 第1章练习
add_executable(ex-01-01 exercises/ch01/ex01.cpp)
add_executable(ex-01-02 exercises/ch01/ex02.cpp)
add_executable(ex-01-03 exercises/ch01/ex03.cpp)

# 第2章练习
add_executable(ex-02-01 exercises/ch02/ex01.cpp)
add_executable(ex-02-02 exercises/ch02/ex02.cpp)
add_executable(ex-02-03 exercises/ch02/ex03.cpp)
add_executable(ex-02-04 exercises/ch02/ex04.cpp)
add_executable(ex-02-05 exercises/ch02/ex05.cpp)
add_executable(ex-02-06 exercises/ch02/ex06.cpp)
add_executable(ex-02-07 exercises/ch02/ex07.cpp)
add_executable(ex-02-08 exercises/ch02/ex08.cpp)

# 第3章练习
add_executable(ex-03-01 exercises/ch03/ex01.cpp)
add_executable(ex-03-02 exercises/ch03/ex02.cpp)
add_executable(ex-03-03 exercises/ch03/ex03.cpp)
add_executable(ex-03-04 exercises/ch03/ex04.cpp)
add_executable(ex-03-05 exercises/ch03/ex05.cpp)
add_executable(ex-03-06 exercises/ch03/ex06.cpp)

# 第4章练习
add_executable(ex-04-01 exercises/ch04/ex01.cpp)
add_executable(ex-04-02 exercises/ch04/ex02.cpp)
add_executable(ex-04-03 exercises/ch04/ex03.cpp)
add_executable(ex-04-04 exercises/ch04/ex04.cpp)
add_executable(ex-04-05 exercises/ch04/ex05.cpp)
add_executable(ex-04-06 exercises/ch04/ex06.cpp)
add_executable(ex-04-07 exercises/ch04/ex07.cpp)
add_executable(ex-04-08 exercises/ch04/ex08.cpp)